// version of protocol buffer used
syntax = "proto3";
import "product_storage.proto";
import "shopping_list.proto";

option java_multiple_files = true;
option java_package = "com.sdcc.shoppinglist.summary";
option java_outer_classname = "SummaryProto";
option objc_class_prefix = "SUM";

// package name for the buffer will be used later
package summary;

// service which can be executed
service Summary {
  rpc WeekSummary(SummaryRequest) returns (SummaryData);
  rpc MonthSummary(SummaryRequest) returns (SummaryData);
  rpc TotalSummary(SummaryRequest) returns (SummaryData);
}

message SummaryRequest {}

/*
message SummaryItem {
//  string itemName = 1;
//  shopping_list.Unit unit = 2;
//  shopping_list.ProductType type = 3;
  string mostUsedProduct = 1;
  string mostBoughtProduct = 2;
  int32 totalQuantity = 4;
  int32 timesUsed = 5;
  int32 timesBought = 6; // Quante volte è stato comprato in settimana/mese
  int32 numberExpired = 7; // Quanti sono scaduti
  int32 pantrySize = 8; // Quanti ne rimangono ora
}
*/

message SummaryData {
  Period reference = 1;
  string mostUsedProduct = 2;
  string mostBoughtProduct = 3;
  int32 totalQuantity = 4;
  int32 timesUsed = 5;
  int32 timesBought = 6; // Quante volte è stato comprato in settimana/mese
  int32 numberExpired = 7; // Quanti sono scaduti
  int32 currentPantrySize = 8;
//  repeated SummaryItem items = 2;
}

enum Period {
  Weekly = 0;
  Monthly = 1;
  Total = 2;
}